# BasicOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/data_structures/: lab_19.c  lab_19.h
libs/data_structures/array/: array.c  array.h
libs/data_structures/data/: data.c  data.h
libs/data_structures/lab20/: lab20-.c  lab20-.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/penultimate_labe/: lab_19.c  lab_19.h
libs/data_structures/polynom/: polynominals.c  polynominals.h
libs/data_structures/str/: string.c  string.h
libs/data_structures/tests/: test_matrix.c  test_matrix.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
libs/tests/: string.c  string.h
olds_main/: lab14.c  lab15.c  lab17.c  lab18.c  main_lab19.c
